# tic-tac-toe

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/: main.c
src/core/: bot_algorithm.c  bot_algorithm.h  tictactoe.c  tictactoe.h
src/utils/: utils.c  utils.h
